--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "proxy": "http://localhost:5555",
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.0",
+    "lucide-react": "^0.406.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.0",
