--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.6",
     "lucide-react": "^0.406.0",
     "react": "^18.2.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.0.0",
