--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
