--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
